enable deletion of decks. enable the user to rearrange fields in quiz
